--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,34 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.omegaspocktari.movieprojectone.MovieActivity">
+        <activity
+            android:name="MovieActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MovieDetailActivity"
-            android:label="Movie Details" />
-
-        <activity android:name=".SettingsActivity"
-            android:label="Settings Activity" />
+        <activity
+            android:name=".MovieDetailActivity"
+            android:label="@string/title_activity_movie_details"
+            android:parentActivityName=".MovieActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.omegaspocktari.movieprojectone.MovieActivity" />
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MovieActivity"
+            android:theme="@style/SettingsTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.omegaspocktari.movieprojectone.MovieActivity" />
+        </activity>
     </application>
 
 </manifest>
