--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
+            android:icon="@android:color/transparent"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MovieActivity"
             android:theme="@style/SettingsTheme">
